# LLMChineseCompression

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: DEVELOPMENT.md  roadmap.md
src/zippedtext/: __init__.py  __main__.py  api_client.py  arithmetic.py  bench.py  bitstream.py  cdf_utils.py  cli.py  cli_config.py  codegen.py  compressor.py  config.py  decoder.py  encoder.py  format.py  gain_estimator.py  online_manifest.py  provider.py  residual.py  router.py  segment.py  sideinfo_codec.py  template_codec.py  term_dictionary.py  tokenizer.py
src/zippedtext/predictor/: __init__.py  adaptive.py  base.py  llm.py  ngram.py  phrases.py  priors.py
tests/: sample_cn.txt  sample_large.txt  sample_structured_api.txt  sample_structured_config.txt  test_analysis_manifest.py  test_arithmetic.py  test_benchmark_matrix.py  test_cli.py  test_codegen.py  test_config.py  test_format_v2.py  test_format_v3.py  test_gain_estimator.py  test_online.py  test_online_integration.py  test_online_structured.py  test_phrases.py  test_priors.py  test_residual.py  test_roundtrip.py  test_router.py  test_segment.py  test_sideinfo_codec.py  test_template_codec.py
tests/benchmark_samples/: api_doc_sample.txt  bilingual_terms_sample.txt  config_sample.txt  faq_sample.txt  mixed_prose_sample.txt  release_notes_sample.txt
